--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 
 8        "test": "echo \"No test specified\" && exit 1",
 
-9        "start": "dockerfile"
+9        "start": "dockerfile",
 
 10    },
 
